--- a/portfolio.html
+++ b/portfolio.html
@@ -82,11 +82,64 @@
                     <h1 class=" text-white display-6 fw-bold mb-3">Checkout a few of my works</h1>
                 </div>
 
+                <div class="row justify-content-center gap-lg-5  p-lg-4  text-sm-start">
+
+                    <div id="imgSlide03" class="col-xxl-4 col-lg-5 col-md-5 con-project-img hidden slide imgSlide03"><a
+                            href="https://arbab57.github.io/portfolio/" target="_blank"><img class="project-img"
+                                src="assets/projects/project-portfolio-1.png" alt=""></a>
+                    </div>
+
+                    <div
+                        class="col-xl-6 col-md-6 d-flex flex-column justify-content-center p-sm-5 p-4 my-4 my-sm-0 hidden">
+
+                        <h3 class="fs-6 text-muted-3 mb-3">CSS3 & HTML</h3>
+                        <h3 class="fs-2 mb-5 fw-normal"><a class="text-white"
+                                href="https://arbab57.github.io/portfolio/" target="_blank">Design
+                                Portfolio: Where
+                                Art Meets
+                                Code</a></h3>
+                        <p class="fs-5 text-muted-3 mb-4">I built a stunning design portfolio website to showcase my
+                            creative journey and highlight my expertise in web development. This project was a labor of
+                            love, allowing me to combine my passion for design and coding to create a truly unique and
+                            interactive experience.</p>
+                        <a class="text-blue-1 fs-5" href="https://arbab57.github.io/portfolio/" target="_blank">View
+                            Project</a>
+                    </div>
+
+
+                </div>
+
+
+
+
+                <div class="row justify-content-center flex-row-reverse gap-lg-4 p-lg-5 text-sm-start">
+                    <div id="imgSlide02" class="col-xxl-4 col-lg-5 col-md-5 con-project-img hidden slide "><a
+                            href="https://arbab57.github.io/onlineCourses/" target="_blank"><img class="project-img"
+                                src="assets/projects/project- courses.png" alt=""></a>
+                    </div>
+
+                    <div
+                        class="col-xl-6 col-md-6 d-flex flex-column justify-content-center p-sm-5 p-4 my-4 my-sm-0 hidden">
+
+                        <h3 class="fs-6 text-muted-3 mb-3">JavaScript (ES6+)</h3>
+                        <h3 class="fs-2 mb-5 fw-normal"><a class="text-white"
+                                href="https://arbab57.github.io/onlineCourses/" target="_blank">MindMax:
+                                Maximizing Potential
+                                through Online Learning</a></h3>
+                        <p class="fs-5 text-muted-3 mb-4">I'm thrilled to have created an impactful learning experience
+                            that has already seen significant student engagement and success. It was a pleasure
+                            collaborating with the team to bring their vision to life!</p>
+                        <a class="text-blue-1 fs-5" href="https://arbab57.github.io/onlineCourses/" target="_blank">View
+                            Project</a>
+                    </div>
+
+
+                </div>
 
                 <div class="row justify-content-center gap-lg-5  p-lg-4  text-sm-start">
 
                     <div id="imgSlide01" class="col-xxl-4 col-lg-5 col-md-5 con-project-img hidden slide imgSlide01"><a
-                            href="assets/projects/architecture-website-bootstrap/index.html" target="_blank"><img
+                            href="https://arbab57.github.io/architecturesite/index.html" target="_blank"><img
                                 class="project-img" src="assets/projects/project-architecture.png" alt=""></a>
                     </div>
 
@@ -95,76 +148,27 @@
 
                         <h3 class="fs-6 text-muted-3 mb-3">BOOTSTRAP 5</h3>
                         <h3 class="fs-2 mb-5 fw-normal"><a class="text-white"
-                                href="assets/projects/architecture-website-bootstrap/index.html"
-                                target="_blank">Constructing Excellence: Architecture Firm</a></h3>
+                                href="https://arbab57.github.io/architecturesite/index.html"
+                                target="_blank">Constructing Excellence:
+                                Architecture Firm</a></h3>
                         <p class="fs-5 text-muted-3 mb-4">Responsive design for a seamless user experience across
                             devices.
                             Interactive project gallery.
                             Integrated blog for sharing industry insights and news
                             Optimized performance for fast loading times</p>
-                        <a class="text-blue-1 fs-5" href="assets/projects/architecture-website-bootstrap/index.html"
-                            target="_blank">View Project</a>
-                    </div>
-
-
-                </div>
-
-                <div class="row justify-content-center flex-row-reverse gap-lg-4 p-lg-5 text-sm-start">
-                    <div id="imgSlide02" class="col-xxl-4 col-lg-5 col-md-5 con-project-img hidden slide "><a
-                            href="assets/projects/books-site-bootstrap/index.html" target="_blank"><img
-                                class="project-img" src="assets/projects/project- courses.png" alt=""></a>
-                    </div>
-
-                    <div
-                        class="col-xl-6 col-md-6 d-flex flex-column justify-content-center p-sm-5 p-4 my-4 my-sm-0 hidden">
-
-                        <h3 class="fs-6 text-muted-3 mb-3">JavaScript (ES6+)</h3>
-                        <h3 class="fs-2 mb-5 fw-normal"><a class="text-white"
-                                href="assets/projects/books-site-bootstrap/index.html" target="_blank">MindMax:
-                                Maximizing Potential
-                                through Online Learning</a></h3>
-                        <p class="fs-5 text-muted-3 mb-4">I'm thrilled to have created an impactful learning experience
-                            that has already seen significant student engagement and success. It was a pleasure
-                            collaborating with the team to bring their vision to life!</p>
-                        <a class="text-blue-1 fs-5" href="assets/projects/books-site-bootstrap/index.html"
-                            target="_blank">View Project</a>
+                        <a class="text-blue-1 fs-5" href="https://arbab57.github.io/architecturesite/index.html"
+                            target="_blank">View
+                            Project</a>
                     </div>
 
 
                 </div>
 
 
-
-                <div class="row justify-content-center gap-lg-5  p-lg-4  text-sm-start">
-
-                    <div id="imgSlide03" class="col-xxl-4 col-lg-5 col-md-5 con-project-img hidden slide imgSlide03"><a
-                            href="assets/projects/portfolio-asignment-bootstrap/index.html" target="_blank"><img
-                                class="project-img" src="assets/projects/project-portfolio-1.png" alt=""></a>
-                    </div>
-
-                    <div
-                        class="col-xl-6 col-md-6 d-flex flex-column justify-content-center p-sm-5 p-4 my-4 my-sm-0 hidden">
-
-                        <h3 class="fs-6 text-muted-3 mb-3">CSS3 & HTML</h3>
-                        <h3 class="fs-2 mb-5 fw-normal"><a class="text-white"
-                                href="assets/projects/portfolio-asignment-bootstrap/index.html" target="_blank">Design
-                                Portfolio: Where
-                                Art Meets
-                                Code</a></h3>
-                        <p class="fs-5 text-muted-3 mb-4">I built a stunning design portfolio website to showcase my
-                            creative journey and highlight my expertise in web development. This project was a labor of
-                            love, allowing me to combine my passion for design and coding to create a truly unique and
-                            interactive experience.</p>
-                        <a class="text-blue-1 fs-5" href="assets/projects/portfolio-asignment-bootstrap/index.html"
-                            target="_blank">View Project</a>
-                    </div>
-
-
-                </div>
 
                 <div class="row justify-content-center flex-row-reverse gap-lg-5 p-lg-4 text-sm-start">
                     <div id="imgSlide04" class="col-xxl-4 col-lg-5 col-md-5 con-project-img hidden slide imgSlide04"><a
-                            href="assets/projects/online courses landing page/" target="_blank"><img class="project-img"
+                            href="https://arbab57.github.io/bookstore/" target="_blank"><img class="project-img"
                                 src="assets/projects/project-ourtracks.png" alt=""></a>
                     </div>
 
@@ -173,14 +177,14 @@
 
                         <h3 class="fs-6 text-muted-3 mb-3">E-commerce</h3>
                         <h3 class="fs-2 mb-5 fw-normal"><a class="text-white"
-                                href="assets/projects/online courses landing page/index.html" target="_blank">The Book
+                                href="https://arbab57.github.io/bookstore/" target="_blank">The Book
                                 Haven: E-commerce
                                 Solution</a></h3>
                         <p class="fs-5 text-muted-3 mb-4">Integrating the payment gateway and book catalog APIs.
                             Optimizing the site for performance and scalability.
                             Ensuring security and data privacy.</p>
-                        <a class="text-blue-1 fs-5" href="assets/projects/online courses landing page/index.html"
-                            target="_blank">View Project</a>
+                        <a class="text-blue-1 fs-5" href="https://arbab57.github.io/bookstore/" target="_blank">View
+                            Project</a>
                     </div>
 
 
@@ -192,21 +196,20 @@
                 <div class="row justify-content-center gap-lg-5  p-lg-4  text-sm-start">
 
                     <div id="imgSlide05" class="col-xxl-4 col-lg-5 col-md-5 con-project-img hidden slide imgSlide05"><a
-                            href="assets/projects/travel website/index.html" target="_blank"><img class="project-img"
+                            href="https://arbab57.github.io/travel/" target="_blank"><img class="project-img"
                                 src="assets/projects/697-890.png" alt=""></a></div>
 
                     <div
                         class="col-xl-6 col-md-6 d-flex flex-column justify-content-center p-sm-5 p-4 my-4 my-sm-0 hidden">
 
                         <h3 class="fs-6 text-muted-3 mb-3">FrameWroks</h3>
-                        <h3 class="fs-2 mb-5 fw-normal"><a class="text-white"
-                                href="assets/projects/travel website/index.html" target="_blank">TravelTech: AI-Powered
+                        <h3 class="fs-2 mb-5 fw-normal"><a class="text-white" href="https://arbab57.github.io/travel/"
+                                target="_blank">TravelTech: AI-Powered
                                 Travel</a></h3>
                         <p class="fs-5 text-muted-3 mb-4">Integrating data from various sources, such as flight APIs,
                             hotel booking engines, and activity providers.Ensuring a seamless user experience across
                             various devices and screen sizes.</p>
-                        <a class="text-blue-1 fs-5" href="assets/projects/travel website/index.html"
-                            target="_blank">View
+                        <a class="text-blue-1 fs-5" href="https://arbab57.github.io/travel/" target="_blank">View
                             Project</a>
                     </div>
 
@@ -215,29 +218,30 @@
 
                 <div class="row justify-content-center flex-row-reverse gap-lg-5 p-lg-4 text-sm-start">
                     <div id="imgSlide06" class="col-xxl-4 col-lg-5 col-md-5 con-project-img hidden slide imgSlide06"><a
-                            href="assets/projects/landing-page/index.html" target="_blank"><img class="project-img"
-                                src="assets/projects/project-architecture-projects-2.png" alt=""></a>
+                            href="https://arbab57.github.io/portfolio2/" target="_blank"><img class="project-img"
+                                src="assets/projects/portfolio-practice.png" alt=""></a>
                     </div>
 
                     <div
                         class="col-xl-6 col-md-6 d-flex flex-column justify-content-center p-sm-5 p-4 my-4 my-sm-0 hidden">
 
-                        <h3 class="fs-6 text-muted-3 mb-3">Landing Pages</h3>
+                        <h3 class="fs-6 text-muted-3 mb-3">Portfolios</h3>
                         <h3 class="fs-2 mb-5 fw-normal"><a class="text-white"
-                                href="assets/projects/landing-page/index.html" target="_blank">Product Landing Page:
-                                Design &
-                                Development</a></h3>
-                        <p class="fs-5 text-muted-3 mb-4"> Interactive product demo.
-                            Responsive design with smooth animations.
-                            Integration with social media sharing buttons.
-                            Secure payment gateway integration (Stripe).
-                            User reviews and ratings system</p>
-                        <a class="text-blue-1 fs-5" href="assets/projects/landing-page/index.html" target="_blank">View
+                                href="https://arbab57.github.io/portfolio2/" target="_blank">Empowering Innovaters:
+                                Portfolio</a></h3>
+                        <p class="fs-5 text-muted-3 mb-4">Clean, modern, and responsive design.
+                            High-quality images and graphics.
+                            Interactive elements, such as hover effects and animations.
+                            Easy navigation and clear information architecture.
+                            Mobile-friendly and accessible design.</p>
+                        <a class="text-blue-1 fs-5" href="https://arbab57.github.io/portfolio2/" target="_blank">View
                             Project</a>
                     </div>
 
 
                 </div>
+
+
 
 
 
