--- a/resume.html
+++ b/resume.html
@@ -128,16 +128,11 @@
                         to
                         make a difference through my
                         creative solutions.</h3>
-                    <p class="fs-5 text-muted-3 line-he mb-5 hidden">Far far away, behind the word mountains, far from
-                        the
-                        countries
-                        Vokalia and
-                        Consonantia,
-                        there live
-                        the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics,
-                        a
-                        large
-                        language ocean.</p>
+                    <p class="fs-5 text-muted-3 line-he mb-5 hidden">I'm a passionate front-end developer
+                        with a keen eye for detail and a love for building responsive, user-friendly interfaces. With
+                        6 years of experience in the field. I'm dedicated to staying up-to-date with the
+                        latest trends and technologies, ensuring my solutions are always modern, efficient, and
+                        scalable.</p>
 
                     <div>
                         <div>
