--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         <button id="crossButton">X</button>
         <nav>
             <a href="index.html">
-                <h2 class="m-0 fs-5 text-white logo">Arbab Bashir</h2>
+                <h2 class="m-0 fs-5 text-secondary fw-bold logo">Arbab Bashir</h2>
             </a>
             <a href="index.html">Home</a>
             <a href="resume.html">Resume</a>
