--- a/contact.html
+++ b/contact.html
@@ -65,7 +65,7 @@
             <a href="resume.html">Resume</a>
             <a href="service.html">Service</a>
             <a href="portfolio.html">Portfolio</a>
-            <a href="contact.html">Contact</a>
+            <a class="text-secondary fw-bold" href="contact.html">Contact</a>
 
         </nav>
 
