--- a/resume.html
+++ b/resume.html
@@ -63,7 +63,7 @@
                 <h2 class="m-0 fs-5 text-white logo">Arbab Bashir</h2>
             </a>
             <a href="index.html">Home</a>
-            <a href="resume.html">Resume</a>
+            <a class="text-secondary fw-bold" href="resume.html">Resume</a>
             <a href="service.html">Service</a>
             <a href="portfolio.html">Portfolio</a>
             <a href="contact.html">Contact</a>
