--- a/service.html
+++ b/service.html
@@ -63,7 +63,7 @@
             </a>
             <a href="index.html">Home</a>
             <a href="resume.html">Resume</a>
-            <a href="service.html">Service</a>
+            <a class="text-secondary fw-bold" href="service.html">Service</a>
             <a href="portfolio.html">Portfolio</a>
             <a href="contact.html">Contact</a>
 
