--- a/portfolio.html
+++ b/portfolio.html
@@ -36,7 +36,7 @@
 
 
             <div class="d-flex align-items-center">
-                <div class="dropdown show menu-icon ">
+                <div id="menuSticky" class="dropdown show menu-icon ">
                     <a class="btn" href="#" role="button" id="dropdownMenu" data-bs-toggle="dropdown"
                         aria-haspopup="true" aria-expanded="false">
                         <div class="row d-flex flex-column gap-1 w-100">
