--- a/resume.html
+++ b/resume.html
@@ -36,9 +36,9 @@
 
 
             <div class="d-flex align-items-center">
-                <div id="menuSticky" class="dropdown show menu-icon ">
-                    <a class="btn" href="#" role="button" id="dropdownMenu" data-bs-toggle="dropdown"
-                        aria-haspopup="true" aria-expanded="false">
+              <div id="menuSticky" class="dropdown show menu-icon">
+                    <a class="btn d-flex justify-content-center" href="#" role="button" id="dropdownMenu"
+                        data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         <div class="row d-flex flex-column gap-1 w-100">
                             <div class="border-2 border-top border-bottom border-white "></div>
                             <div class="border-2 border-top border-bottom border-white  "></div>
