--- a/resume.html
+++ b/resume.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-
+    <span id="checker" class="checker">hello</span>
     <div class="progress-bar-container">
         <div id="bar"></div>
     </div>
@@ -36,7 +36,7 @@
 
 
             <div class="d-flex align-items-center">
-              <div id="menuSticky" class="dropdown show menu-icon">
+                <div id="menuSticky" class="dropdown show menu-icon">
                     <a class="btn d-flex justify-content-center" href="#" role="button" id="dropdownMenu"
                         data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         <div class="row d-flex flex-column gap-1 w-100">
@@ -64,8 +64,8 @@
             </a>
             <a href="index.html">Home</a>
             <a class="text-secondary fw-bold" href="resume.html">Resume</a>
-            <a href="service.html">Service</a>
             <a href="portfolio.html">Portfolio</a>
+            <a href="service.html">Service</a>
             <a href="contact.html">Contact</a>
 
         </nav>
@@ -109,7 +109,7 @@
 
                     </div>
                     <h3 class="fs-5 text-white mb-3">Contact me here!</h3>
-                    <p class="text-muted-3 fs-5">Email: <a class="" href="">arbabbashir30@gamil.com</a></p>
+                    <p class="text-muted-3 fs-5">Email: <a class="break" href="">arbabbashir30@gamil.com</a></p>
                     <p class="text-muted-3 fs-5">Phone: <a href="">+92-319-5147479</a></p>
                 </div>
             </div>
