--- a/resume.html
+++ b/resume.html
@@ -82,7 +82,7 @@
 
 
                 <div
-                    class="position-relative col-xl-6 col-md-6  py-5 container-info px-sm-0 px-5 text-center text-sm-start hidden">
+                    class="position-relative col-xl-6 col-md-6  py-5 container-info px-sm-0 px-5 text-center text-sm-start hidden padding-0">
                     <h2 class="position-absolute about text-muted-2 d-none d-lg-block">ABOUT</h2>
                     <h3 class="about-main fw-light text-white fs-2">Hi! I'm Arbab Bashir</h3>
                     <p class="about-sub text-muted-3 fs-5">I take a creative, collabrative & strategic approach to
