--- a/resume.html
+++ b/resume.html
@@ -128,9 +128,8 @@
                         to
                         make a difference through my
                         creative solutions.</h3>
-                    <p class="fs-5 text-muted-3 line-he mb-5 hidden">I'm a passionate front-end developer
-                        with a keen eye for detail and a love for building responsive, user-friendly interfaces. With
-                        6 years of experience in the field. I'm dedicated to staying up-to-date with the
+                    <p class="fs-5 text-muted-3 line-he mb-5 hidden">With
+                        6 years of experience in the field, I'm dedicated to staying up-to-date with the
                         latest trends and technologies, ensuring my solutions are always modern, efficient, and
                         scalable.</p>
 
