added the scroll down thing

--- a/resume.html
+++ b/resume.html
@@ -74,10 +74,13 @@
 
     <main>
         <div class="container px-xl-5">
+
             <div class="row justify-content-between ">
 
-                <div id="img-slide" class="col-xxl-4 col-lg-5 col-md-5 hidden slide"> <img class="w-100"
-                        src="assets/images/man-image.jpg" alt=""></div>
+                <div id="img-slide" class="col-xxl-4 col-lg-5 col-md-5 hidden slide position-relative"> <img
+                        class="w-100" src="assets/images/man-image.jpg" alt="">
+                    <img id="scrollIcon" class="scrollIcon2" src="assets/images/scrolling.png" alt="">
+                </div>
 
 
 
