--- a/index.html
+++ b/index.html
@@ -77,7 +77,9 @@
     <main class="overflow-hidden">
 
 
-        <section class="section-01 py-5 ">
+        <section class="section-01 py-5 position-relative">
+
+            <img id="scrollIcon" class="scrollIcon2" src="assets/images/scrolling.png" alt="">
 
             <div id="container-change" class="container text-center">
 
