changed scroll icon and adjusted position, different classes for main and resume section ie top 150%, 100%

--- a/index.html
+++ b/index.html
@@ -79,7 +79,8 @@
 
         <section class="section-01 py-5 position-relative">
 
-            <img id="scrollIcon" class="scrollIcon2" src="assets/images/scrolling.png" alt="">
+            <img id="scrollIcon" class="scrollIcon2 scrollPosition-main" src="assets/images/icons8-scroll-64.png"
+                alt="">
 
             <div id="container-change" class="container text-center">
 
