--- a/resume.html
+++ b/resume.html
@@ -79,7 +79,8 @@
 
                 <div id="img-slide" class="col-xxl-4 col-lg-5 col-md-5 hidden slide position-relative"> <img
                         class="w-100" src="assets/images/man-image.jpg" alt="">
-                    <img id="scrollIcon" class="scrollIcon2" src="assets/images/scrolling.png" alt="">
+                    <img id="scrollIcon" class="scrollIcon2 scrollPosition-resume"
+                        src="assets/images/icons8-scroll-64.png" alt="">
                 </div>
 
 
