--- a/contact.html
+++ b/contact.html
@@ -12,7 +12,9 @@
 </head>
 
 <body>
+    <span id="checker" class="checker">hello</span>
     <div class="progress-bar-container">
+
         <div id="bar"></div>
     </div>
     <!-- <span id="scrolly">1</span> -->
@@ -35,7 +37,7 @@
 
 
             <div class="d-flex align-items-center">
-                <div class="dropdown show menu-icon ">
+                <div id="menuSticky" class="dropdown show menu-icon ">
                     <a class="btn" href="#" role="button" id="dropdownMenu" data-bs-toggle="dropdown"
                         aria-haspopup="true" aria-expanded="false">
                         <div class="row d-flex flex-column gap-1 w-100">
@@ -59,9 +61,9 @@
         <button id="crossButton">X</button>
         <nav>
             <a href="index.html">
-                <h2 class="m-0 fs-5 text-white logo">Arbab Bashir</h2>
+                <h2 class="mb-5 fs-5 text-white logo">Arbab Bashir</h2>
             </a>
-            <a href="index.html">Home</a>
+
             <a href="resume.html">Resume</a>
             <a href="portfolio.html">Portfolio</a>
             <a href="service.html">Service</a>
@@ -175,7 +177,7 @@
 
 
 
-    <script src="script3.js"></script>
+    <script src="script-contact.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 
