--- a/index.html
+++ b/index.html
@@ -60,9 +60,8 @@
         <button id="crossButton">X</button>
         <nav>
             <a href="index.html">
-                <h2 class="m-0 fs-5 text-secondary fw-bold logo">Arbab Bashir</h2>
+                <h2 class="mb-5 fs-5 text-secondary fw-bold logo">Arbab Bashir</h2>
             </a>
-            <a href="index.html">Home</a>
             <a href="resume.html">Resume</a>
             <a href="portfolio.html">Portfolio</a>
             <a href="service.html">Service</a>
@@ -468,7 +467,7 @@
 
 
 
-    <script src="script.js"></script>
+    <script src="script-main.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 
 </body>
