--- a/portfolio.html
+++ b/portfolio.html
@@ -60,9 +60,9 @@
         <button id="crossButton">X</button>
         <nav>
             <a href="index.html">
-                <h2 class="m-0 fs-5 text-white logo">Arbab Bashir</h2>
+                <h2 class="mb-5 fs-5 text-white logo">Arbab Bashir</h2>
             </a>
-            <a href="index.html">Home</a>
+
             <a href="resume.html">Resume</a>
             <a class="text-secondary fw-bold" href="portfolio.html">Portfolio</a>
             <a href="service.html">Service</a>
@@ -300,7 +300,7 @@
 
 
 
-    <script src="script2.js"></script>
+    <script src="script-portfolio.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 
