--- a/service.html
+++ b/service.html
@@ -12,6 +12,7 @@
 </head>
 
 <body>
+    <span id="checker" class="checker">hello</span>
     <div class="progress-bar-container">
         <div id="bar"></div>
     </div>
@@ -35,7 +36,7 @@
 
 
             <div class="d-flex align-items-center">
-                <div class="dropdown show menu-icon ">
+                <div id="menuSticky" class="dropdown show menu-icon ">
                     <a class="btn" href="#" role="button" id="dropdownMenu" data-bs-toggle="dropdown"
                         aria-haspopup="true" aria-expanded="false">
                         <div class="row d-flex flex-column gap-1 w-100">
@@ -59,9 +60,9 @@
         <button id="crossButton">X</button>
         <nav>
             <a href="index.html">
-                <h2 class="m-0 fs-5 text-white logo">Arbab Bashir</h2>
+                <h2 class="mb-5 fs-5 text-white logo">Arbab Bashir</h2>
             </a>
-            <a href="index.html">Home</a>
+
             <a href="resume.html">Resume</a>
             <a href="portfolio.html">Portfolio</a>
             <a class="text-secondary fw-bold" href="service.html">Service</a>
@@ -160,7 +161,7 @@
 
 
 
-    <script src="script.js"></script>
+    <script src="script-contact.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 
