--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 </head>
 
 <body>
+    <img id="suu" src="suuu.gif" alt="">
     <span id="checker" class="checker">hello</span>
     <div class="progress-bar-container">
         <div id="bar"></div>
