updated some stuff.
new project banner.
added a anchor to goto top section of page quickly.
reduced the timing of countup client from 22 to 14

--- a/contact.html
+++ b/contact.html
@@ -65,7 +65,7 @@
             </a>
 
             <a href="resume.html">Resume</a>
-            <a href="portfolio.html">Portfolio</a>
+            <a href="portfolio.html">Portfolio <span class="new">New Projects</span></a>
             <a href="service.html">Service</a>
             <a class="text-secondary fw-bold" href="contact.html">Contact</a>
 
