--- a/index.html
+++ b/index.html
@@ -21,7 +21,16 @@
     <div class="rect-01"></div>
     <div class="rect-02"></div>
 
-    <header class="py-5 overflowx-hidden">
+
+    <div id="con-news" class="overflow-hidden con-news">
+        <h2 class="text-white fs-5 text-center m-0">New Projects added! Checkout Portfolio from the menu section to
+            explore.
+        </h2>
+    </div>
+
+
+
+    <header id="header" class="py-5 overflowx-hidden">
 
         <div class="container d-flex justify-content-between px-3 px-sm-5">
             <a href="index.html">
@@ -63,7 +72,9 @@
                 <h2 class="mb-5 fs-5 text-secondary fw-bold logo">Arbab Bashir</h2>
             </a>
             <a href="resume.html">Resume</a>
-            <a href="portfolio.html">Portfolio</a>
+
+            <a href="portfolio.html">Portfolio <span class="new">New Projects</span></a>
+
             <a href="service.html">Service</a>
 
             <a href="contact.html">Contact</a>
@@ -76,7 +87,7 @@
     <main class="overflow-hidden">
 
 
-        <section class="section-01 py-5 position-relative">
+        <section id="section-01" class="section-01 py-5 position-relative">
 
             <img id="scrollIcon" class="scrollIcon2 scrollPosition-main" src="assets/images/icons8-scroll-64.png"
                 alt="">
@@ -366,7 +377,7 @@
             </div>
         </section>
 
-        <section class="section-05 py-5">
+        <section class="section-05 py-5 position-relative">
             <div class="container text-center">
                 <div class="container-common-heading text-center pb-5 mb-5 hidden">
                     <p class="sub-heading fs-5 mb-3">PORTFOLIO</p>
@@ -405,7 +416,9 @@
 
 
 
-    <footer class="py-5 hidden">
+    <footer class="py-5 hidden position-relative">
+        <span class="up-arrow"><a href="#header"><i class="fa-solid fa-caret-up text-white fs-1"></i></a></span>
+
         <div class="container d-flex flex-column align-items-center py-5">
             <div class="d-flex fs-4 gap-3 mt-4 mb-5 pb-3">
                 <a target="_blank" class="text-muted-3" href="https://github.com/arbab57">
