--- a/service.html
+++ b/service.html
@@ -64,7 +64,7 @@
             </a>
 
             <a href="resume.html">Resume</a>
-            <a href="portfolio.html">Portfolio</a>
+            <a href="portfolio.html">Portfolio <span class="new">New Projects</span></a>
             <a class="text-secondary fw-bold" href="service.html">Service</a>
             <a href="contact.html">Contact</a>
 
