made the news container responsive

--- a/index.html
+++ b/index.html
@@ -22,8 +22,10 @@
     <div class="rect-02"></div>
 
 
-    <div id="con-news" class="overflow-hidden con-news">
-        <h2 class="text-white fs-5 text-center m-0">New Projects added! Checkout Portfolio from the menu section to
+    <div id="con-news" class="overflow-hidden con-news px-1">
+        <h2 class="text-white fs-5 text-center m-0 text-news">New Projects added! Checkout Portfolio from the
+            menu section
+            to
             explore.
         </h2>
     </div>
