added the dynamic content changing

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 
 </head>
 
+
 <body>
     <span id="checker" class="checker">hello</span>
     <div class="progress-bar-container">
@@ -24,8 +25,7 @@
 
     <div id="con-news" class="overflow-hidden con-news px-1">
         <h2 class="text-white fs-5 text-center m-0 text-news">New Projects added! Checkout Portfolio from the
-            menu section
-            to
+            menu icon to
             explore.
         </h2>
     </div>
@@ -75,7 +75,9 @@
             </a>
             <a href="resume.html">Resume</a>
 
-            <a href="portfolio.html">Portfolio <span class="new">New Projects</span></a>
+            <a href="portfolio.html">Portfolio <span class="new">
+                    New Projects
+                </span></a>
 
             <a href="service.html">Service</a>
 
@@ -210,7 +212,7 @@
             <div class="container">
                 <div class="container-common-heading text-center pb-5 mb-5 hidden">
                     <p class="sub-heading fs-5 mb-3">PORTFOLIO</p>
-                    <h1 class=" text-white display-6 fw-bold mb-3">Checkout a few of my works</h1>
+                    <h1 class=" text-white display-6 fw-bold mb-3">Checkout a few of my Projects</h1>
                 </div>
 
                 <div class="row justify-content-center gap-lg-5  p-lg-4  text-sm-start">
