added a new project and changed the count up client

--- a/index.html
+++ b/index.html
@@ -375,6 +375,11 @@
                 </div>
 
 
+                <p class="text-center fs-4 "><a class="bg-primary text-white px-2 py-1 rounded-1"
+                        href="portfolio.html">View More</a>
+                </p>
+
+
 
 
 
@@ -391,21 +396,21 @@
                 <div class="d-flex flex-column align-items-center align-items-sm-start row px-sm-5 py-5 py-md-0">
                     <div class="col-4 px-0 hidden">
                         <h3 class="achievement">CLIENTS</h3>
-                        <h4 id="client-num" class="achievement-number">420</h4>
+                        <h4 id="client-num" class="achievement-number"></h4>
                     </div>
                 </div>
 
                 <div class="d-flex flex-column align-items-sm-center align-items-center row px-sm-5 py-5 py-md-0">
                     <div class="col-4 px-0 hidden">
                         <h3 class="achievement">PROJECTS DONE</h3>
-                        <h4 id="project-num" class="achievement-number">420</h4>
+                        <h4 id="project-num" class="achievement-number"></h4>
                     </div>
                 </div>
 
                 <div class="d-flex flex-column align-items-sm-end align-items-center row px-sm-5 py-5 py-md-0">
                     <div class="col-4 px-0 hidden">
                         <h3 class="achievement">RETURNING CLIENTS</h3>
-                        <h4 id="return-num" class="achievement-number">420</h4>
+                        <h4 id="return-num" class="achievement-number"></h4>
                     </div>
                 </div>
 
