--- a/portfolio.html
+++ b/portfolio.html
@@ -88,6 +88,7 @@
                         <button id="prev-btn" class="btn-page">&lt</button>
                         <button id="one-btn" class="btn-page">1</button>
                         <button id="two-btn" class="btn-page">2</button>
+                        <button id="three-btn" class="btn-page">3</button>
                         <button id="next-btn" class="btn-page">&gt</button>
                     </div>
                 </div>
